<resources>
    <string name="app_name">Boot Manager</string>
    <string name="bootmanager_version">Boot Manager V</string>
    <string name="brought_by">Brought to you by:</string>
    <string name="developers">George Flammer (GFlam)\nBill Naples (Conap)</string>
    <string name="contact_title">Contact Info:</string>
    <string name="contact_info">Twitter: http://bit.ly/qunAKH\n\nEmail: support@init2winitapps.com\n\nForum: http://forum.init2winitapps.com\n\nWebsite: http://init2winitapps.com</string>
    <string name="about_title">What is Boot Manager:</string>
    <string name="about_info">Boot Manager is the must have app for any flashaholic allowing you to boot up to 5 ROMs on your phone at a time and reboot between them with just a reboot!</string>
    <string name="credits_title">Credits\nBoot Manager Developers:</string>
    <string name="specialthanks_title">Special Thanks</string>
    <string name="specialthanks"><i>Bentotbox</i> for all the help you\'ve been and help with the awesome viewpager and fragments<i>\n\nRevNumbers</i> for all the 2nd init teachings and helping to get 2nd init devices supported\n\n<i>Apophis9283</i> for all the help on the forum and all his ideas for Boot Manager\n\n<i>Sora1995</i> for all the IRC help and ideas as well\n\n<i>Black-ice</i> for the Italian translation.\n\n<i>GioBru56</i> for updating the Italian translation.\n\n<i>webfeind2000</i> for the nice idea on resizing imgs\n\n<i>Con247</i>  for the scripts to flash boot.img on rezound through recovery for failsafes and also for help testing and throwing ideas around \n\n<i>drellisdee</i>  for the mainver fix when using Con247\'s method for flashing boot.img in recovery on rezound.\n\n <b>Thanks</b>\nThank you for using Boot Manager please rate and comment in the market it would be much appreciated!</string>
	<string name="button_sdcardoff">Mount SD Card</string>
	<string name="mountText">You have connected your phone to your computer via USB the stock Android mounter will no longer work because of the changes Boot Manager has made to your phone. Please use this screen to mount your sdcard.</string>
    <string name="button_reboot">Reboot Options</string>
    <string name="reboot_message">Are you sure you want to reboot?</string>
    <string name="help">Help</string>
	<string name="menu_settings">Settings</string>
    <string name="Other_Apps">Other Apps</string>
    <string name="device">What Device Do You Have?</string>
    <string name="sdcardblock">What is your sdcard block?</string>
    <string name="systemSize">What is your system\'s size in mb? </string>
    <string name="dataSize">What is your data\'s size in mb?</string>
    <string name="cacheSize">What is your cache\'s size in mb?</string>
    <string name="button_trash">Empty Trash</string>
    <string name="tip1">This app works as your recovery for all ROMs installed to your sdcard. Install themes, kernels, and any other update.zips through this app in the Install ROMs section.\n\nThe phone ROM is the only thing that uses your recovery.</string>
    <string name="tip2">Set up your Phone ROM so that you can boot back to the ROM installed to your phone</string>
    <string name="tip3">If your device is unsupported, see the help section for how you can manually support your device.\n\nPlease email us as well so we can add support for your device.</string>
    <string name="tip4">If your sdcard ROM feels laggy it could be due to your sdcard. Class 2 sdcards usually come with the phone and have a much lower read/write speed then sdcards of higher classes.\nWe recommend you purchase an sdcard of class 6 or higher for optimal performance.</string>
    <string name="tip5">You can rename the ROM names that appear on the buttons by selecting set names in the Boot Installed ROM section</string>
    <string name="tip6">Use the widget for easy ROM switching</string>
    <string name="tip7">Please rate and comment in the market to support us. Also don\'t heistate to tell your friends about Boot Manager\n\nThank you for using Boot Manager.\n\nIf you have any questions, problems or issues please email us before rating/commenting badly, chances are we can solve your problem/issue quickly and easily as well as answer any questions you may have.</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="unmount">Unmount SD Card</string>
    <string name="mount">Mount SD Card</string>
    <string name="lowspace">You do not have enough space on your sdcard to install a rom! Please clear some space before installing</string>
    <string name="filesystem">Ext2: Compatible with most rom\'s\nExt4: Experimental-Faster but not all rom\'s support it\nIf your not doing a full wipe please select the same filesystem currently installed to this slot</string>
    <string name="manual">Are you sure your variables are set correctly\? Wrong variables will cause the rom\'s not to boot.</string>
    <string name="phoneSet">Please run Setup Phone in main screen before installing ROM\'s. This will backup your current boot.img so that it can be restored when you want to boot back to this rom.</string>
    <string name="phoneWarn">Do Not run this if you are booted into one of the sdcard rom\'s. This is only to be run from the phone\'s ROM.</string>
    <string name="phoneSucc">Your current rom\'s boot.img has been successfully stored so you can boot back to this rom. You only need to run this again if you change the regular rom on your phone through recovery. While this app does not change anything in your rom on the phone now it is still a good idea to make a Nandroid backup in recovery.</string>
    <string name="phoneFail">Backup of your boot.img has failed. Please try again.</string>
    <string name="unsupported">This is an unsupported device, if you think this is a mistake send us an email or input your information manually</string>
    <string name="cancelInstall">Are you sure you want to cancel the current install\?</string>
    <string name="trash">Are you sure you want to empty your trash (LOST.DIR .Trash-100) folders from your sdcard, this can clear a lot of space</string>
    <string name="zipAlign">Zipalign all applications\?</string>
    <string name="success">Changes made successfully, would you like to reboot now\?</string>
    <string name="fixPerm">Fix Permissions</string>
    <string name="nMount">Sdcard Not Mounted</string>
    <string name="emptyFol">No ROMs in this folder!</string>
    <string name="aboutBM">About Boot Manager</string>
    <string name="quickTip">Quick tips to help you use this app correctly</string>
    <string name="noSupport">Only use this if your device was not detected!</string>
    <string name="donate">Donations aren\'t needed but much appreciated. All donations will go towards new test devices, and server costs.</string>
    <string name="website">Official Init 2 Winit Apps Website</string>
    <string name="forum">Official Init 2 Winit Apps Forum</string>
    <string name="changeLog">Boot Manager Change Log</string>
    <string name="autoMount">Mount the Sdcard automatically when usb is connected\?</string>
    <string name="installHelp">Installing ROMs</string>
    <string name="installInf">To install a zip select Install Zip\'s from the main screen. This then will take you to a list of file\'s on your sdcard. Select the zip you wish to install. You then will be taken to the zip installer screen. There are 3 checkboxes for wiping the img\'s that the zip\'s install too select to wipe them only if you are overwriting the slot. If your installing an updated version of a ROM that\'s already installed to the slot then only select wipe system. If flashing an add-on to a ROM such as gapps or a kernel don\'t select any of the wipe checkboxes. After selecting your checkboxes select the slot you wish to install to.</string>
    <string name="bootHelp">Booting between roms</string>
    <string name="bootInfo">To boot to a different ROM you have installed, select Boot Installed ROMs from the main screen or use the widget. This will take you to a list of ROM\'s you have installed then just select the rom you want to boot to. You may also name the ROMs you have installed by selecting the set names button in the manage installed ROMs section.</string>
    <string name="phoneHelp">Setting up your phone\'s normal rom.</string>
    <string name="phoneInfo">The app prompts you to set up the phone ROM when you first install it. This will make a copy of your boot.img so that it\'s available when you want to boot back to your normal phone ROM. This only needs to be done once unless you change the phone ROM. If you flash a new ROM to the phone through recovery then reinstall this app and choose setup phone rom from the main screen to update the saved boot.img for your phone rom.</string>
    <string name="manualHelp">Manually Setting Vairables</string>
    <string name="manualInfo">To find these variables so that you can enter them manually you will need to use adb shell.\n\nFind Device\n\nIn adb shell type\n\ngetprop ro.product.board\n\nFor the rest of the variables we need to reboot to recovery and use adb shell again. In recovery select the partitions section and mount your sdcard to your phone not the computer, mount data, system and cache as well.\n\nTo find sdcard block in adb shell type\n\nmount sdcard\nmount\n\nThen look for the line that has sdcard in it. It will have a path in the same line. It will be /dev/block/mmcblkXpX where X is numbers\n\nTo find the sizes of system, data, and cache type in adb shell\n\ndf -h\n\nYou should see the size\'s in mb\'s of the three sizes. Please enter them in mb\'s in the manual variables screen.</string>
    <string name="click_to_clear_log_from_sdcard">Click to clear log from sdcard</string>
    <string name="send_log">Please only send your log if requested from GFlam or Conap</string>
    <string name="screenInstall">Keeps your screen on during install, use if you have a profile to underclock your phone when the screen is on.</string>
    <string name="sdnotifyMount">Select to disable usb notifications (Only use if on phone ROM)</string>
    <string name="bootTitle">Boot ROM</string>
    <string name="recoveryTitle">Boot Recovery</string>
    <string name="editTitle">Manage UI</string>
    <string name="viewpagerTitles">Use slot name as viewpager titles (Restart Boot Manager to Apply)</string>
    <string name="romPage">Open Boot Mangaer to the page of the ROM booted</string>
	<string name="setupPhoneRom">Setup Phone</string>
	<string name="uiTweaks">Change the colors of various user interfaces</string>
	<string name="topbarStart">Start of top bar gradient</string>
	<string name="topbarEnd">End of top bar gradient</string>
	<string name="buttonStart">Start of button gradient</string>
	<string name="buttonEnd">Top of button gradient</string>
	<string name="themePref">Check to use dark theme</string>
	<string name="topbarText">Color of text on the top bar</string>
	<string name="buttonText">Color of the text on buttons</string>
	<string name="pageTitleText">Color of title text on ROM pages</string>
	<string name="pageUnusedTitleText">Color of unused title text on ROM pages</string>
	<string name="force_large_boot">Force BootManager to use the old method of putting busybox in the boot.img. This is how it was done in v3.3 or older. </string>
	<string name="vibrate_when_install_completes">Vibrate when install completes</string>
	<string name="play_notifications_when_install_completes">Play notifications when install completes</string>
	<string name="twitter">Follow us on Twitter</string>
	<string name="slotnumber">The number of additional slots you would like to create (does not include phone ROM)</string>
	<string name="suToasts">Whether or not Boot Manager should show superuser toasts when executing a root command</string>
</resources>