<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:weightSum="3">
  <LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:layout_weight="1"
  	android:weightSum="10">
      <ImageView android:src="@drawable/screen_shot" 
      	android:layout_height="fill_parent" 
      	android:id="@+id/imageView1" 
      	android:layout_width="fill_parent"
      	android:layout_weight="4"
      	android:layout_marginTop="15dp"
      	android:layout_marginLeft="3dp">
      </ImageView>
      <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="vertical"
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:layout_weight="6"
  		android:weightSum="4">
          <Button android:text="@string/bootTitle" 
          	android:id="@+id/bootButton" 
          	android:layout_width="match_parent" 
          	android:layout_height="wrap_content"
          	android:layout_weight="1"
          	android:layout_marginTop="30dp"
          	android:layout_marginLeft="3dp"
          	android:layout_marginRight="3dp"
          	android:background="@drawable/big_button"
          	android:textColor="@color/buttonText">
          </Button>
          <Button android:text="@string/recoveryTitle" 
          	android:id="@+id/recoveryButton" 
          	android:layout_width="match_parent" 
          	android:layout_height="wrap_content"
          	android:layout_weight="1"
          	android:layout_marginTop="15dp"
          	android:layout_marginLeft="3dp"
          	android:layout_marginRight="3dp"
          	android:background="@drawable/big_button"
          	android:textColor="@color/buttonText">
          </Button>
		<Button android:text="@string/setupPhoneRom" 
          	android:id="@+id/editROMButton" 
          	android:layout_width="match_parent" 
          	android:layout_height="wrap_content"
          	android:layout_weight="1"
          	android:layout_marginTop="15dp"
          	android:layout_marginLeft="3dp"
          	android:layout_marginRight="3dp"
          	android:background="@drawable/big_button"
          	android:textColor="@color/buttonText">
          </Button>
          <Button android:text="@string/editTitle" 
          	android:id="@+id/editButton" 
          	android:layout_width="match_parent" 
          	android:layout_height="wrap_content"
          	android:layout_weight="1"
          	android:layout_marginTop="15dp"
          	android:layout_marginLeft="3dp"
          	android:layout_marginRight="3dp"
          	android:layout_marginBottom="15dp"
          	android:background="@drawable/big_button"
          	android:textColor="@color/buttonText">
          </Button>
  	  </LinearLayout>
  </LinearLayout>
  <ScrollView android:id="@+id/scrollView1" 
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:layout_weight="2"
	android:scrollbarThumbVertical="@drawable/scrollbar_handle_vertical" 
	android:scrollbarTrackVertical="@drawable/scrollbar_handle_vertical_track">
  <LinearLayout
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<LinearLayout
  		xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="horizontal"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
      	<TextView android:text="ROM Name: "
      		android:id="@+id/romName" 
      		android:layout_width="wrap_content"
      		android:layout_height="wrap_content"
      		android:layout_marginBottom="3dp"
      		android:layout_marginTop="15dp"
      		android:layout_marginLeft="3dp">
      	</TextView>
      	<TextView android:text="ROM"
      		android:id="@+id/romText" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"
      		android:layout_marginTop="15dp"
      		android:layout_marginRight="3dp">
      	</TextView>
    </LinearLayout>
    <LinearLayout
  		xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="horizontal"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
      	<TextView android:text="Kernel Name: " 
      		android:id="@+id/kernelName" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"
      		android:layout_marginBottom="3dp"
      		android:layout_marginLeft="3dp">
      	</TextView>
      	<TextView android:text="kernel"
      		android:id="@+id/kernelText" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"
      		android:layout_marginRight="3dp">
      	</TextView>
    </LinearLayout>
	<LinearLayout
  		xmlns:android="http://schemas.android.com/apk/res/android"
  		android:orientation="horizontal"
  		android:layout_width="wrap_content"
  		android:layout_height="wrap_content">
      	<TextView android:text="Description: " 
      		android:id="@+id/description" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"
      		android:layout_marginBottom="3dp"
      		android:layout_marginLeft="3dp">
      	</TextView>
      	<TextView android:text="description"
      		android:id="@+id/descriptionText" 
      		android:layout_width="wrap_content" 
      		android:layout_height="wrap_content"
      		android:layout_marginRight="3dp">
      	</TextView>
    </LinearLayout>
	</LinearLayout>
	</ScrollView>
</LinearLayout>